--- a/PROJETOPORTIFOLIO/style.css
+++ b/PROJETOPORTIFOLIO/style.css
@@ -42,6 +42,11 @@ h2.titulo span{
     color: #00ccff;
 }
 
+button:hover{
+    box-shadow: 2px 2px 2px #0400ff;
+    transform: scale(1.05);
+}
+
 /*ESTILO DE CABECALHO*/
 header{
     padding: 40PX 4%;
@@ -72,11 +77,6 @@ header nav ul{
 header nav ul li{
     display: inline-block;
     padding: 0 40px;
-}
-
-.nicolas-contato button:hover{
-    box-shadow: 2px 2px 2px #0400ff;
-    transform: scale(1.05);
 }
 
 /* ESTILO DO TOPO DO SITE */
@@ -125,10 +125,21 @@ section.especialidades{
     padding: 40px 4%;   
 }
 
+section.especialidades .flex{
+    gap: 60px;
+}
+
 .especialidades .especialidades-box{
     color: #fff;
     padding: 40px;
-    border: 2px solid #fff;
+    border-radius: 20px;
+    margin-top: 45px;
+    transition: .2s;
+}
+
+.especialidades .especialidades-box:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 20px #ffffff70;
 }
 
 .especialidades .especialidades-box i{
@@ -137,6 +148,49 @@ section.especialidades{
 }
 
 .especialidades .especialidades-box h3{
-    font-size: 30px;
+    font-size: 28px;
     margin: 15px 0;
+}
+
+/* ESTILO DO SOBRE */
+section.sobre{
+    padding: 30px 4%;
+}
+
+section.sobre .flex{
+    align-items: center;
+    gap: 50px;
+}
+
+.sobre .txt-sobre{
+    color: #fff;
+}
+
+.sobre .txt-sobre h2{
+    font-size: 40px;
+    line-height: 40px;
+    margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span{
+    color: #0065fc;
+    display: block;
+}
+
+.sobre .txt-sobre p{
+    font-size: 15px;
+    margin: 30px 0;
+    text-align: justify;
+}
+
+.sobre .txt-sobre .btn-social button{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    border: none;
+    background-color: #0065fc;
+    font-size: 22px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: .2s;
 }
