--- a/style.css
+++ b/style.css
@@ -1,27 +1,26 @@
-
 /* ESTILO GERAL*/
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
 
-body{
+body {
     background-color: #000;
     height: 100vh;
 }
 
-.interface{
+.interface {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.flex{
-  display: flex;  
+.flex {
+    display: flex;
 }
 
-.nicolas-contato button{
+.nicolas-contato button {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600;
@@ -32,104 +31,106 @@ body{
     transition: .2s;
 }
 
-h2.titulo{
+h2.titulo {
     color: #fff;
     font-size: 40px;
     text-align: center;
 }
 
-h2.titulo span{
+h2.titulo span {
     color: #00ccff;
 }
 
-button:hover, form .nicolas-enviar input:hover{
+button:hover,
+form .nicolas-enviar input:hover {
     box-shadow: 2px 2px 2px #0400ff;
     transform: scale(1.05);
 }
 
 /*ESTILO DE CABECALHO*/
-header{
+header {
     padding: 40PX 4%;
 }
 
-header > .interface{
+header>.interface {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-header a{
+header a {
     color: #5c5c5c;
     text-decoration: none;
     display: inline-block;
     transition: .2s;
 }
 
-header a:hover{
+header a:hover {
     color: #fff;
     transform: scale(1.05);
 }
 
-header nav ul{
+header nav ul {
     list-style-type: none;
 }
 
-header nav ul li{
+header nav ul li {
     display: inline-block;
     padding: 0 40px;
 }
 
 /* ESTILO DO TOPO DO SITE */
-section,topo-do-site{
+section.topo-do-site {
     padding: 40px 4%;
 }
 
-section.topo-do-site .flex{
+section.topo-do-site .flex {
     align-items: center;
     justify-self: center;
     gap: 90px;
 }
 
-.topo-do-site h1{
+.topo-do-site h1 {
     color: #fff;
     font-size: 30px;
     line-height: 40px;
 }
 
-.topo-do-site .txt-topo-site h1 span{
+.topo-do-site .txt-topo-site h1 span {
     color: #00ccff;
 }
 
-.topo-do-site .txt-topo-site p{
+.topo-do-site .txt-topo-site p {
     color: #fff;
     margin: 40px 0;
 }
 
-.topo-do-site .img-topo-site img{
+.topo-do-site .img-topo-site img {
     position: relative;
     animation: flutuar 2s ease-in-out infinite alternate;
 }
 
-@keyframes flutuar{
-    0%{
+@keyframes flutuar {
+    0% {
         top: 0;
     }
-    100%{
+
+    100% {
         top: 30px;
     }
 }
 
 
 /* ESTILO DAS ESPECIALIDADES */
-section.especialidades{
-    padding: 40px 4%;   
+section.especialidades {
+    padding: 40px 4%;
 }
 
-section.especialidades .flex{
+section.especialidades .flex {
     gap: 60px;
 }
 
-.especialidades .especialidades-box{
+.especialidades .especialidades-box {
     color: #fff;
     padding: 40px;
     border-radius: 20px;
@@ -137,53 +138,53 @@ section.especialidades .flex{
     transition: .2s;
 }
 
-.especialidades .especialidades-box:hover{
+.especialidades .especialidades-box:hover {
     transform: scale(1.05);
     box-shadow: 0 0 20px #ffffff5e;
 }
 
-.especialidades .especialidades-box i{
+.especialidades .especialidades-box i {
     font-size: 70px;
     color: #0065fc;
 }
 
-.especialidades .especialidades-box h3{
+.especialidades .especialidades-box h3 {
     font-size: 28px;
     margin: 15px 0;
 }
 
 /* ESTILO DO SOBRE */
-section.sobre{
+section.sobre {
     padding: 30px 4%;
 }
 
-section.sobre .flex{
+section.sobre .flex {
     align-items: center;
     gap: 50px;
 }
 
-.sobre .txt-sobre{
+.sobre .txt-sobre {
     color: #fff;
 }
 
-.sobre .txt-sobre h2{
+.sobre .txt-sobre h2 {
     font-size: 40px;
     line-height: 40px;
     margin-bottom: 30px;
 }
 
-.sobre .txt-sobre h2 span{
+.sobre .txt-sobre h2 span {
     color: #0065fc;
     display: block;
 }
 
-.sobre .txt-sobre p{
+.sobre .txt-sobre p {
     font-size: 15px;
     margin: 30px 0;
     text-align: justify;
 }
 
-.nicolas-social button{
+.nicolas-social button {
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -196,17 +197,17 @@ section.sobre .flex{
 }
 
 /* ESTILO DO PORTFOLIO */
-section.portfolio{
+section.portfolio {
     padding: 80px 4%;
-    box-shadow: 0 0 40px 10px #ffffff5e ;
+    box-shadow: 0 0 40px 10px #ffffff5e;
 }
 
-section.portfolio .flex{
+section.portfolio .flex {
     justify-content: space-around;
     margin-top: 60px;
 }
 
-.img-port{
+.img-port {
     width: 360px;
     height: 400px;
     background-size: cover;
@@ -217,18 +218,18 @@ section.portfolio .flex{
     position: relative;
 }
 
-.img-port:hover{
+.img-port:hover {
     background-position: 100% 100%;
 }
 
-.overlay{
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     background-color: #000000ab;
-    border-radius:  40px;
+    border-radius: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -239,16 +240,16 @@ section.portfolio .flex{
     transition: .5s;
 }
 
-.overlay:hover{
+.overlay:hover {
     opacity: 1;
 }
 
 /* ESTILO DO FORMULARIO DE CONTATO */
-section.formulario{
+section.formulario {
     padding: 80px 4%;
 }
 
-form{
+form {
     max-width: 500px;
     margin: 0 auto;
     display: flex;
@@ -258,7 +259,8 @@ form{
     margin-top: 40px;
 }
 
-form input, form textarea{
+form input,
+form textarea {
     width: 100%;
     background-color: #333333;
     border: 0;
@@ -269,17 +271,17 @@ form input, form textarea{
     font-size: 18px;
 }
 
-form textarea{
+form textarea {
     resize: none;
     max-height: 200px;
 }
 
-form .nicolas-enviar{
+form .nicolas-enviar {
     margin-top: 20px;
     text-align: center;
 }
 
-form .nicolas-enviar input{
+form .nicolas-enviar input {
     width: 120px;
     background-color: #00ccff;
     font-weight: 700;
@@ -289,28 +291,124 @@ form .nicolas-enviar input{
 
 /*  ESTILO DO RODAPE */
 
-footer{
+footer {
     padding: 40PX 4%;
-    box-shadow: 0 0 40px 10px #ffffff5e ;
+    box-shadow: 0 0 40px 10px #ffffff5e;
 }
 
-footer .flex{
+footer .flex {
     justify-content: space-between;
 }
 
-footer .line-footer{
+footer .line-footer {
     padding: 20px 0;
 }
 
-.borda{
+.borda {
     border-top: 2px solid #0065fc;
 }
 
-footer .line-footer p i{
+footer .line-footer p i {
     color: #0065fc;
     font-size: 22px;
 }
 
-footer .line-footer p a{
+footer .line-footer p a {
     color: #fff;
 }
+
+@media screen and (max-width: 1020px) {
+
+    /*  CLASSES GERAIS*/
+    .flex {
+        flex-direction: column;
+    }
+
+    h2.titulo {
+        font-size: 32px;
+        line-height: 30px;
+    }
+
+    .topo-do-site .flex {
+        flex-direction: column-reverse;
+    }
+
+    /* CABECALHO */
+    .menu-desktop,
+    .nicolas-contato {
+        display: none;
+    }
+
+    /* TOPO DO SITE */
+
+    section.topo-do-site .flex {
+        gap: 40px;
+    }
+
+    section.topo-do-site {
+        padding: 20px 8%;
+    }
+
+    .topo-do-site h1 {
+        font-size: 25px;
+    }
+
+    .topo-do-site .img-topo-site img {
+        width: 100%;
+    }
+
+    /* ESTILO DAS ESPECIALIDADES */
+    section.especialidades {
+        padding: 40px 8%;
+    }
+
+    /*  SOBRE */
+    .flex {
+        flex-direction: column;
+    }
+
+    section.sobre {
+        padding: 80px 8%;
+    }
+
+    .sobre .txt-sobre h2 {
+        font-size: 34px;
+        line-height: 35px;
+        text-align: center;
+    }
+
+    .nicolas-social{
+        text-align: center;
+    }
+
+    .img-sobre img{
+        width: 100%;
+    }
+
+    /* PORTFOLIO*/
+    section.portfolio {
+        padding: 80px 8%;
+    }
+
+    .img-port {
+        width: 100%;
+        max-width: 360PX;
+        margin: 0 auto;
+    }
+
+    section.portfolio .flex {
+        gap: 60PX;
+    }
+
+    /* RODAPE */
+
+    footer .flex {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    footer .line-footer {
+        text-align: center;
+    }
+}
+    
